@@ -3,5 +3,3 @@
 Merge *rqda from different coders
 
 inter-coder reliability 
-
-export coding to html
