@@ -21,7 +21,7 @@ The relation between two codings can be any of inclusion, overlap, exact
 nor inclusion).
 }
 \value{
-  A 5-element list:
+  A 6-element list:
   \item{Relation}{Length-1 character, standing for the type of
     relation. It may be one of inclusion, overlap, exact or proximity.}
   \item{OverlapIndex}{Length-2 vector, the index of overlapping between
@@ -29,10 +29,10 @@ nor inclusion).
   \item{UnionIndex}{Length-2 vector, the index of union of the two
     coding indexes. It is c(NA,NA) when relation is proximity.}
   \item{Distance}{Distance of two coding indexes. It is NA when relation is not proximity.}
-  \item{WhichMin}{Is is 1 when index1 has the minimum index, 2 when
-    index2 has the minimum index. When they have the same minimum
-    index,it is 1 when index1 has the max index, it is 2 when index2 has
-    the max index. It is NA when relation is Exact.}
+  \item{WhichMin}{Which argument (index1 or index2) has the minimum
+    value. If both have the same minmum value, return NA.}
+  \item{WhichMax}{Which argument (index1 or index2) has the maximum
+    value. If both have the same maxmum value, return NA.}
 }
 \author{ HUANG Ronggui}
 %\seealso{ ~~objects to See Also as \code{\link{help}}, ~~~ }
@@ -42,7 +42,7 @@ relation(c(20,30),c(22,28)) # inclusion
 relation(c(10,40),c(20,80)) # overlap
 relation(c(10,20),c(30,50)) # proximity with distance of 10
 relation(c(10,20),c(10,20)) # exact
-relation(c(10,20),c(10,30)) # WhichMin is 2
+relation(c(10,20),c(10,30)) # WhichMin is c(1,2)
 }
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
